# onig

./: CMakeLists.txt  config.h.cmake  dist.info  libonig.def
lib/: libonig.dylib
